Attempt to remove duplicate descriptions for the various runners
This is a mess. Each file has their own descriptions. I've attempted to rephrase them for easier translation and unify them so that there aren't 2-4 variants of descriptions for each tool. It's still not perfect but it's better than before.

--- a/po/id.po
+++ b/po/id.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-09-11 21:05+0200\n"
+"POT-Creation-Date: 2024-09-11 21:32+0200\n"
 "PO-Revision-Date: 2024-01-07 02:06+0000\n"
 "Last-Translator: Reza Almanda <rezaalmanda27@gmail.com>\n"
 "Language-Team: Indonesian <https://hosted.weblate.org/projects/protonplus/"
@@ -95,15 +95,16 @@ msgstr "Terjadi error saat menginstal "
 msgid "Runners"
 msgstr "Runner"
 
-#: src/launchers/bottles.vala:7
+#: src/launchers/bottles.vala:7 src/launchers/hgl.vala:11
+#: src/launchers/lutris.vala:7
 #, fuzzy
-msgid "Compatibility tool to run Windows games on Linux."
+msgid "Compatibility tools for running Windows software on Linux."
 msgstr "Kompatibilitas alat untuk menjalankan game Windows di Linux"
 
 #: src/launchers/bottles.vala:11 src/launchers/hgl.vala:15
 #: src/launchers/lutris.vala:11
 #, fuzzy
-msgid "Vulkan based implementation of Direct3D 9, 10 and 11 for Linux/Wine."
+msgid "Vulkan-based implementation of Direct3D 9, 10 and 11 for Linux/Wine."
 msgstr ""
 "Implementasi berbasis Vulkan dari Direct3D 9, 10 dan 11 untuk Linux / Wine"
 
@@ -129,20 +130,14 @@ msgstr ""
 
 #: src/launchers/hgl.vala:7
 #, fuzzy
-msgid "Steam compatibility tool for running Windows games."
-msgstr "Alat kompatibilitas Steam untuk menjalankan game Windows"
-
-#: src/launchers/hgl.vala:11
-#, fuzzy
-msgid "Wine is a program which allows running Microsoft Windows programs."
-msgstr ""
-"Wine adalah program yang memungkinkan menjalankan program Microsoft Windows"
+msgid "Compatibility tools by Valve for running Windows software on Linux."
+msgstr "Kompatibilitas alat untuk menjalankan game Windows di Linux"
 
 #: src/launchers/hgl.vala:19 src/launchers/lutris.vala:15
 #, fuzzy
 msgid ""
-"Fork of Wine's VKD3D which aims to implement the full Direct3D 12 API on top "
-"of Vulkan."
+"Variant of Wine's VKD3D which aims to implement the full Direct3D 12 API on "
+"top of Vulkan."
 msgstr ""
 "Fork of Wine's VKD3D yang bertujuan untuk mengimplementasikan API Direct3D "
 "12 secara penuh di atas Vulkan"
@@ -152,26 +147,19 @@ msgid "Wine build compiled from the official WineHQ sources."
 msgstr "Wine build disusun dari sumber resmi WineHQ."
 
 #: src/launchers/hgl.vala:69 src/launchers/lutris.vala:64
-msgid "Wine build with the Staging patchset applied."
+#, fuzzy
+msgid "Wine build with the Staging patchset."
 msgstr "Pembuatan wine dengan menerapkan patchset Staging."
 
 #: src/launchers/hgl.vala:72 src/launchers/lutris.vala:67
-msgid ""
-"Wine build with the Staging patchset applied and with many additional useful "
-"patches."
-msgstr ""
+#, fuzzy
+msgid "Wine build with the Staging patchset and many other useful patches."
+msgstr "Pembuatan wine dengan menerapkan patchset Staging."
 
 #: src/launchers/hgl.vala:90 src/launchers/steam.vala:67
-msgid ""
-"Custom Proton build for running Windows games, built with the Wine-tkg build "
-"system."
-msgstr ""
-
-#: src/launchers/lutris.vala:7
 #, fuzzy
-msgid "Program which allows running Microsoft Windows programs."
-msgstr ""
-"Wine adalah program yang memungkinkan menjalankan program Microsoft Windows"
+msgid "Custom Proton build for running Windows games, based on Wine-tkg."
+msgstr "Alat kompatibilitas Steam untuk menjalankan game Windows"
 
 #: src/launchers/lutris.vala:87
 msgid "Contains RTX fix for Star Citizen."
@@ -185,28 +173,26 @@ msgstr ""
 
 #: src/launchers/steam.vala:71
 msgid ""
-"Luxtorpeda provides Linux-native game engines for specific Windows-only "
-"games."
+"Luxtorpeda provides Linux-native game engines for certain Windows-only games."
 msgstr ""
 
 #: src/launchers/steam.vala:72
-msgid ""
-"Steam Play compatibility tool to run DOS games using native Linux DOSBox."
-msgstr ""
+#, fuzzy
+msgid "Steam compatibility tool for running DOS games using DOSBox for Linux."
+msgstr "Alat kompatibilitas Steam untuk menjalankan game Windows"
 
 #: src/launchers/steam.vala:73
+#, fuzzy
 msgid ""
-"Steam Play compatibility tool to run adventure games using native Linux "
-"ScummVM."
-msgstr ""
+"Steam compatibility tool for running adventure games using ScummVM for Linux."
+msgstr "Alat kompatibilitas Steam untuk menjalankan game Windows"
 
 #: src/launchers/steam.vala:74
 msgid "Custom Proton build for running the Northstar client for Titanfall 2."
 msgstr ""
 
 #: src/launchers/steam.vala:75
-msgid ""
-"Compatibility tool for Steam Play based on Wine and additional components."
+msgid "Compatibility tool for Steam based on Proton and additional components."
 msgstr ""
 
 #: src/launchers/steam.vala:77
@@ -367,6 +353,18 @@ msgstr "Kompatibilitas alat untuk menjalankan game Windows di Linux"
 #: src/application.vala:71
 msgid "Special thanks to"
 msgstr ""
+
+#, fuzzy
+#~ msgid "Wine is a program which allows running Microsoft Windows programs."
+#~ msgstr ""
+#~ "Wine adalah program yang memungkinkan menjalankan program Microsoft "
+#~ "Windows"
+
+#, fuzzy
+#~ msgid "Program which allows running Microsoft Windows programs."
+#~ msgstr ""
+#~ "Wine adalah program yang memungkinkan menjalankan program Microsoft "
+#~ "Windows"
 
 #~ msgid "About"
 #~ msgstr "Tentang"
